# go-capture-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cloud-formation.yml  deploy.sh  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  find_stones.py  http-client.env.json  main.py  make_sgf.py  manage.py  nginx.conf  perspective.py  pyproject.toml  requests.http  settings.py  tasks.py
.github/workflows/: build.yaml  build.yml  deploy.yaml  deploy.yml  users.yaml
cloud-formation/: beta-deploy-user.yaml  ecr.yaml  ecr.yml  ecs.yaml  ecs.yml  github-role.yaml  github-role.yml
expected/: 20180422_123507.sgf  20180422_123536.sgf  20220305_144247.sgf  20220305_145614.sgf  20220612_144038.sgf  20220724_140233.sgf  20220801_193252.sgf  20221104_210010.sgf  20221104_210727.sgf  20221105_161948.sgf  20221105_163003.sgf  20230121_140756.sgf  20230204_125949.sgf  20230204_141721.sgf
go_capture/: __init__.py  asgi.py  settings.py  tasks.py  tests.py  urls.py  views.py  wsgi.py
go_capture/sgf/: find_stones.py  make_sgf.py  perspective.py  process_image.py
sgf/: find_stones.py  make_sgf.py  perspective.py  process_image.py  tests.py
