[tool.poetry]
name = "go-position-analyzer"
version = "0.1.0"
description = ""
authors = ["Code-Apprentice <codeguru42@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.3"
celery = "^5.3.1"
environs = "^9.5.0"
fastapi = "^0.100.0"
firebase-admin = "^6.2.0"
gunicorn = "^20.1.0"
opencv-python = "^4.8.0.74"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.3.3"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
